Added bookmarks for change releases instead of using viewpoint. This allows me to Have the RSS link to the article.

--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -8,3 +8,6 @@ calloway
 django-debug-toolbar==0.8.5
 django-staticfiles==1.0.1
 django-disqus==0.4.1
+
+--extra-index-url=http://callowayproject.com/simple/
+django-bookmarks==0.2.1
