Adding some testing twitter auth support

--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -12,3 +12,10 @@ django-disqus==0.4.1
 --extra-index-url=http://callowayproject.com/simple/
 django-bookmarks==0.2.1
 django-compressor==0.9.2
+
+django-oauth-twitter==1.11
+oauth==1.0.1
+python-twitter==0.8.2
+oauth-python-twitter==0.8.2
+oauth2==1.5.170
+simplejson==2.0.9
